--- a/invoice-parser/pom.xml
+++ b/invoice-parser/pom.xml
@@ -36,22 +36,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Mockito Core for mocking -->
         <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
-        <exclusions>
-            <exclusion>
-                <groupId>org.junit.vintage</groupId>
-                <artifactId>junit-vintage-engine</artifactId>
-            </exclusion>
-        </exclusions>
-    </dependency>
-<dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <scope>test</scope>
-    </dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.6.1</version> <!-- Use the latest version -->
+            <scope>test</scope>
+        </dependency>
+
         <!-- Spring Boot Starter Actuator -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -71,24 +64,28 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.3</version>
         </dependency>
-<!-- Jackson Databind (version should be compatible with Spring Boot 3.x) -->
-    <dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-databind</artifactId>
-    <version>2.15.2</version> <!-- Check for the appropriate version -->
-</dependency>
-    <!-- Jackson Core -->
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-core</artifactId>
-        <version>2.15.0</version>
-    </dependency>
-    <!-- Jackson Annotations -->
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-annotations</artifactId>
-        <version>2.15.0</version>
-    </dependency>
+
+        <!-- Jackson Databind (version should be compatible with Spring Boot 3.x) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version> <!-- Check for the appropriate version -->
+        </dependency>
+
+        <!-- Jackson Core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+
+        <!-- Jackson Annotations -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+
         <!-- Tesseract OCR for Image Parsing -->
         <dependency>
             <groupId>net.sourceforge.tess4j</groupId>
@@ -102,6 +99,7 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.11</version> <!-- This version should be compatible with SLF4J 2.x -->
         </dependency>
+
         <!-- Commons IO for File Operations -->
         <dependency>
             <groupId>commons-io</groupId>
@@ -109,7 +107,6 @@
             <version>2.11.0</version>
         </dependency>
 
-        <!-- Removed duplicate JUnit dependencies as spring-boot-starter-test already includes them -->
     </dependencies>
 
     <build>
@@ -117,6 +114,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <!-- No need for javaagent here -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
